--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -7,6 +7,7 @@
 # Batch configuration
 spring.batch.job.enabled=true
 spring.batch.jdbc.initialize-schema=never
+app.demo-env=true
 
 # Database configuration (override for production)
 # spring.datasource.url=jdbc:postgresql://your-prod-db:5432/tcg_arena_prod
