--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
             <version>2.2.0</version>
         </dependency>
         <dependency>
+            <groupId>net.tcgdex</groupId>
+            <artifactId>java-sdk</artifactId>
+            <version>2.0.2</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
@@ -84,6 +89,13 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
 
     <build>
         <plugins>
