Fix DataSource configuration errors and improve transaction handling
- Remove duplicate spring.datasource.driver-class-name property
- Remove malformed postgresql://: line causing binding errors
- Add HikariCP connection pool configuration for better concurrency
- Add Hibernate batch processing properties for bulk operations
- Change transaction propagation from REQUIRES_NEW to default for better performance
- Maintain batch commits within single transaction context

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,22 @@ spring.datasource.url=jdbc:postgresql://db.ixaprhwebhxiadkewtrk.supabase.co:5432
 spring.datasource.username=postgres
 spring.datasource.password=Barella23
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.driver-class-name=org.postgresql.Driver
-postgresql://:
+
+# Connection pool configuration
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
+
 # JPA configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.batch_size=50
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
 
 # Batch configuration
 spring.batch.job.enabled=true
