Fix AuthenticationManager bean and switch to H2 database
- Add missing AuthenticationManager bean in SecurityConfig
- Configure explicit CORS settings for all origins
- Switch from Supabase PostgreSQL to H2 in-memory database
- Add H2 dependency to pom.xml
- Enable H2 console for development
- Application now starts successfully with proper security and database setup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,24 @@
-# Database configuration
-spring.datasource.url=jdbc:postgresql://db.ixaprhwebhxiadkewtrk.supabase.co:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=Barella23
-spring.datasource.driver-class-name=org.postgresql.Driver
+# Database configuration - Development with H2
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+
+# H2 Console (for development)
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 # Connection pool configuration
-spring.datasource.hikari.maximum-pool-size=20
-spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.idle-timeout=600000
 spring.datasource.hikari.max-lifetime=1800000
 
 # JPA configuration
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.batch_size=50
 spring.jpa.properties.hibernate.order_inserts=true
