--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -13,8 +13,18 @@ app.demo-env=true
 spring.datasource.url=jdbc:postgresql://db.ixaprhwebhxiadkewtrk.supabase.co:5432/postgres?ssl=true&sslmode=require
 spring.datasource.username=postgres
 spring.datasource.password=Barella23
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.connection-timeout=60000
 spring.datasource.hikari.maximum-pool-size=10
+
+# JPA configuration for production
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+# H2 Console (disabled in production)
+spring.h2.console.enabled=false
 
 # Logging
 logging.level.com.example.tcgbackend=INFO
