Switch to PostgreSQL as default database everywhere
- Change application.properties to use PostgreSQL (Supabase)
- Update application-test.properties to use PostgreSQL
- Keep application-prod.properties with conservative settings
- H2 dependency now scope test (only for testing)
- Ready for Render deployment with PostgreSQL

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,14 +1,12 @@
-# Test profile configuration
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# Test profile configuration - PostgreSQL
+spring.datasource.url=jdbc:postgresql://db.ixaprhwebhxiadkewtrk.supabase.co:5432/postgres?ssl=true&sslmode=require
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=Barella23
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
-
-spring.h2.console.enabled=true
 
 # Batch configuration for test
 spring.batch.jdbc.initialize-schema=always
