--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,8 @@
-# Database configuration - Development with H2
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
-
-# H2 Console (for development)
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# Database configuration - PostgreSQL (works on Render)
+spring.datasource.url=jdbc:postgresql://db.ixaprhwebhxiadkewtrk.supabase.co:5432/postgres?ssl=true&sslmode=require
+spring.datasource.username=postgres
+spring.datasource.password=Barella23
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Connection pool configuration
 spring.datasource.hikari.maximum-pool-size=10
@@ -18,11 +14,12 @@ spring.datasource.hikari.max-lifetime=1800000
 # JPA configuration
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.batch_size=50
 spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 # Batch configuration
 spring.batch.job.enabled=true
