--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -17,7 +17,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.connection-timeout=60000
 spring.datasource.hikari.maximum-pool-size=10
 
-# JPA configuration for production
+# JPA configuration for production (more conservative than default)
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
