Fix import interruption by increasing server timeouts
- Add server timeout configurations (30m session, 20m connection)
- Prevent Tomcat from interrupting long-running import requests
- Allow batch import jobs to complete without HTTP timeout

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+# Server configuration
+server.servlet.session.timeout=30m
+server.connection-timeout=20m
+server.tomcat.connection-timeout=20m
+server.tomcat.keep-alive-timeout=20m
+
 # Database configuration - PostgreSQL (works on Render)
 spring.datasource.url=jdbc:postgresql://db.ixaprhwebhxiadkewtrk.supabase.co:5432/postgres?ssl=true&sslmode=require
 spring.datasource.username=postgres
