feat: Add complete TCG Arena backend with all features
- Add user management, authentication, and profiles
- Add card collection and trading system
- Add deck building and management
- Add tournament system with participants
- Add achievements and rewards system
- Add notifications and user activities
- Add image management and compression
- Add Firebase messaging integration
- Add comprehensive API endpoints
- Configure production deployment with PostgreSQL
- Add Docker support for containerization

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -37,6 +37,28 @@
 			"isBackground": true,
 			"problemMatcher": [],
 			"group": "build"
+		},
+		{
+			"label": "test-run",
+			"type": "shell",
+			"command": "./mvnw",
+			"args": [
+				"spring-boot:run",
+				"-Dspring-boot.run.profiles=test"
+			],
+			"isBackground": true,
+			"group": "build"
+		},
+		{
+			"label": "test-run",
+			"type": "shell",
+			"command": "./mvnw",
+			"args": [
+				"spring-boot:run",
+				"-Dspring-boot.run.profiles=test"
+			],
+			"isBackground": true,
+			"group": "build"
 		}
 	]
 }
