fix: Temporarily enable table creation for production deployment
- Change hibernate.ddl-auto from validate to create to initialize database tables
- This will be reverted to validate after first successful deployment

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -18,7 +18,7 @@ spring.datasource.hikari.connection-timeout=60000
 spring.datasource.hikari.maximum-pool-size=10
 
 # JPA configuration for production (more conservative than default)
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
