--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -10,9 +10,9 @@ spring.batch.jdbc.initialize-schema=never
 app.demo-env=true
 
 # Database configuration (override for production)
-spring.datasource.url=jdbc:postgresql://db.ixaprhwebhxiadkewtrk.supabase.co:5432/postgres?ssl=true&sslmode=require
-spring.datasource.username=postgres
-spring.datasource.password=Barella23
+spring.datasource.url=jdbc:postgresql://80.211.236.249:5432/tcgarena_db
+spring.datasource.username=tcgarena_user
+spring.datasource.password=tcgarena
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.connection-timeout=60000
 spring.datasource.hikari.maximum-pool-size=10
