--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,8 +1,8 @@
 # Test profile configuration - PostgreSQL
-spring.datasource.url=jdbc:postgresql://db.ixaprhwebhxiadkewtrk.supabase.co:5432/postgres?ssl=true&sslmode=require
+spring.datasource.url=jdbc:postgresql://80.211.236.249:5432/tcgarena_db
+spring.datasource.username=tcgarena_user
+spring.datasource.password=tcgarena
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=postgres
-spring.datasource.password=Barella23
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
