feat: update User model to store favorite TCG types as a comma-separated string; modify related getters and setters for compatibility

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,9 @@ server.connection-timeout=20m
 server.tomcat.connection-timeout=20m
 server.tomcat.keep-alive-timeout=20m
 
+# Demo/Development mode - allows repeated imports
+app.demo-env=true
+
 # Database configuration - PostgreSQL (works on Render)
 spring.datasource.url=jdbc:postgresql://80.211.236.249:5432/tcgarena_db
 spring.datasource.username=tcgarena_user
@@ -48,5 +51,5 @@ jwt.expiration=86400000
 jwt.refresh.expiration=604800000
 
 # External APIs (placeholders)
-external-apis.pokemon-tcg.key=your-pokemon-tcg-api-key
+external-apis.pokemon-tcg.key=3d55e733-ccb6-4071-a868-a720f06cba08
 external-apis.magic-api.key=your-magic-api-key
