feat: Add card image synchronization feature with admin API and configurable storage path.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -62,3 +62,6 @@ justtcg.api.base-url=https://api.justtcg.com/v1
 # Multipart configuration for file uploads
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
+    
+# Image Storage Configuration
+app.image-storage.path=/TCGArena-Images/
