--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -65,3 +65,13 @@ spring.servlet.multipart.max-request-size=50MB
     
 # Image Storage Configuration
 app.image-storage.path=/TCGArena-Images/
+
+# Mail configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${EMAIL_USERNAME:noreply@tcgarena.com}
+spring.mail.password=${EMAIL_PASSWORD:}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
