feat: Add Google Places API integration for shop population with a new Python script, Java service, and administrative endpoint.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,11 @@ server.tomcat.keep-alive-timeout=20m
 app.demo-env=true
 
 # API Keys
+# Google Places API for shop population
+google.places.api.key=AIzaSyDjYjXbpm8a2Be1XsSa6pK0jfuHNAw9SKw
+
+# Secret key for shop population endpoint (leave empty to disable auth)
+app.shop.population.secret.key=${SHOP_POPULATION_SECRET_KEY:tcgarena_shops_2026_secret}
 
 # Database configuration - PostgreSQL (works on Render)
 spring.datasource.url=jdbc:postgresql://80.211.236.249:5432/tcgarena_db
