--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -80,3 +80,9 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+
+# Frontend URL for email links
+app.frontend.url=${FRONTEND_URL:https://tcgarena.it}
+
+# Admin email for batch notifications (import summary, daily digest)
+app.admin.email=patriziopezzilli@gmail.com
