chore: Update mail configuration username and password.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -74,8 +74,8 @@ app.image-storage.path=/TCGArena-Images/
 # Mail configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=${EMAIL_USERNAME:noreply@tcgarena.com}
-spring.mail.password=${EMAIL_PASSWORD:}
+spring.mail.username=tcgarena.app@gmail.com
+spring.mail.password=eeot mcuz tgsh ghae
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
