--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -80,6 +80,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.mail.properties.mail.smtp.from=TCG Arena - Support <tcgarena.app@gmail.com>
 
 # Frontend URL for email links
 app.frontend.url=${FRONTEND_URL:https://tcgarena.it}
