feat: add HERE Places API integration for shop population with new service and endpoints.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,11 @@ server.tomcat.keep-alive-timeout=20m
 app.demo-env=true
 
 # API Keys
-# Google Places API for shop population
+# Google Places API
 google.places.api.key=AIzaSyDjYjXbpm8a2Be1XsSa6pK0jfuHNAw9SKw
+
+# HERE Places API
+here.api.key=KoxManL-WONwiziXvXZQWtoGEvNG2vQWk-Yu9uyj71k
 
 # Secret key for shop population endpoint (leave empty to disable auth)
 app.shop.population.secret.key=${SHOP_POPULATION_SECRET_KEY:tcgarena_shops_2026_secret}
