--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -76,14 +76,16 @@ app.image-storage.path=/TCGArena-Images/
 
 # Mail configuration
 spring.mail.host=smtp.gmail.com
-spring.mail.port=587
+spring.mail.port=465
 spring.mail.username=tcgarena.app@gmail.com
 spring.mail.password=eeot mcuz tgsh ghae
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
-spring.mail.properties.mail.smtp.from=TCG Arena - Support <tcgarena.app@gmail.com>
+spring.mail.properties.mail.smtp.from=tcgarena.app@gmail.com
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
 
 # Frontend URL for email links
 app.frontend.url=${FRONTEND_URL:https://tcgarena.it}
