Refactor EventReminderService to simplify email sending logic and remove unused preferences repository
Enhance TCGApiClient with new methods for importing Magic delta and searching new cards via Scryfall API

Update UserActivityService to exclude USER_PREFERENCES_UPDATED activities from recent global activities

Add dark mode support to email templates and improve styling consistency across various emails

Implement TCGImportScheduler for nightly TCG imports, including delta imports for Magic and full imports for other TCGs

--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,13 @@
             <artifactId>spring-batch-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- Netty DNS resolver for MacOS -->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-resolver-dns-native-macos</artifactId>
+            <version>4.1.94.Final</version>
+            <classifier>osx-aarch_64</classifier>
+        </dependency>
     </dependencies>
 
     <repositories>
