--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -29,3 +29,8 @@ spring.h2.console.enabled=false
 # Logging
 logging.level.com.example.tcgbackend=INFO
 logging.level.org.springframework.batch=DEBUG
+
+# Reduce noise from malformed requests (bots, scanners, etc.)
+logging.level.org.apache.coyote.http11.Http11Processor=ERROR
+logging.level.org.apache.catalina.connector.RequestFacade=ERROR
+logging.level.org.apache.tomcat.util.net=ERROR
