feat: configure Spring message source and add initial internationalized messages for emails and notifications.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -100,3 +100,8 @@ app.frontend.url=${FRONTEND_URL:https://tcgarena.it}
 
 # Admin email for batch notifications (import summary, daily digest)
 app.admin.email=patriziopezzilli@gmail.com
+
+# Messages Configuration
+spring.messages.basename=messages
+spring.messages.encoding=UTF-8
+spring.messages.fallback-to-system-locale=false
