--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,7 +41,7 @@ spring.jpa.properties.hibernate.order_updates=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 # Flyway configuration
-spring.flyway.enabled=true
+spring.flyway.enabled=false
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
 
